--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparent">
+      <nav id="navbar" class="navbar navbar-expand-md fixed-top navbar-transparent">
         <div class="container">
             <a href="#" class="navbar-brand"><img width="142" src="./src/image/spotify.svg" alt="logo"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
@@ -196,5 +196,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="./src/js/script.js"></script>
   </body>
 </html>
