--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore repellendus dolorum architecto quod error commodi? </p>
             </div>
           <div class="col-md-8">
-            <div class="row rotate">
+            <div id="rotate-img" class="row">
               <div class="col-md-6">
                 <img src="./src/image/iphone1.png" alt="iphone" class="img-fluid">
               </div>
