--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
             <div class="col-md-6">
                 <div class="row albuns">
                 <div class="col-md-6 d-md-block">
-                  <img src="./src/image/img1.jpg" alt="album" class="img-fluid ">
+                  <img src="./src/image/img1.jpg" alt="album" class="img-fluid img-album album-noAnimation ">
                 </div>
                 <div class="col-md-6">
-                   <img src="./src/image/img2.jpg" alt="album" class="img-fluid">
+                   <img src="./src/image/img2.jpg" alt="album" class="img-fluid img-album album-noAnimation">
                 </div>
                 </div>
                 <div class="row albuns">
                 <div class="col-md-6 d-md-block">
-                  <img src="./src/image/img3.jpg" alt="album" class="img-fluid">
+                  <img src="./src/image/img3.jpg" alt="album" class="img-fluid img-album album-noAnimation">
                 </div>
                 <div class="col-md-6">
-                   <img src="./src/image/img4.jpg" alt="album" class="img-fluid">
+                   <img src="./src/image/img4.jpg" alt="album" class="img-fluid img-album album-noAnimation">
                 </div>
                 </div>
               </div>
