--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
           </div>
         </div>
       </section>
-      <section id="resources"class="caixa">
+      <!-- FILEPATH: c:\Users\mafsc\Desktop\Projetos\spotify_lp_clone\index.html -->
+      <section id="resources" class="caixa">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -135,16 +136,16 @@
               <h3>Discover</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore repellendus dolorum architecto quod error commodi? </p>
             </div>
-          <div class="col-md-8">
-            <div id="rotate-img" class="row">
-              <div class="col-md-6">
-                <img src="./src/image/iphone1.png" alt="iphone" class="img-fluid">
+            <div class="col-md-8">
+              <div id="rotate-img" class="row">
+                <div class="col-md-6">
+                  <img src="./src/image/iphone1.png" alt="iphone" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                  <img src="./src/image/iphone2.png" alt="iphone" class="img-fluid">
+                </div>
               </div>
-              <div class="col-md-6">
-                <img src="./src/image/iphone2.png" alt="iphone" class="img-fluid">
-              </div>
-            </div>
-          </div>  
+            </div>  
           </div>
         </div>
       </section>
@@ -183,7 +184,7 @@
               <ul class="list-unstyled">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></a></i></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
               </ul>
             </div>
           </div>
