--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <i class="fas - fa-bars text-white"></i>
             </button>
             <div class="collapse navbar-collapse" id="nav-principal">
-              <ul class="navbar-nav ml-auto">
+              <ul id="navbar-top" class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Premium</a>
                 </li>
@@ -93,7 +93,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-                <div class="row albuns">
+                <div class="row album">
                 <div class="col-md-6 d-md-block">
                   <img src="./src/image/img1.jpg" alt="album" class="img-fluid img-album album-noAnimation ">
                 </div>
@@ -126,7 +126,7 @@
       <!-- FILEPATH: c:\Users\mafsc\Desktop\Projetos\spotify_lp_clone\index.html -->
       <section id="resources" class="caixa">
         <div class="container">
-          <div class="row">
+          <div id="resources-content" class="row">
             <div class="col-md-4">
               <h2>Easy</h2>
               <h3>Look for</h3>
@@ -136,8 +136,8 @@
               <h3>Discover</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore repellendus dolorum architecto quod error commodi? </p>
             </div>
-            <div class="col-md-8">
-              <div id="rotate-img" class="row">
+            <div class="col-md-8 ">
+              <div id="rotate-img" class="row resources-imgs">
                 <div class="col-md-6">
                   <img src="./src/image/iphone1.png" alt="iphone" class="img-fluid">
                 </div>
@@ -150,11 +150,11 @@
         </div>
       </section>
       <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2">
-              <img class="img-fluid" src="./src/image/spotify.svg" alt="logo">
-            </div>
+        <div class="container ">
+          <div class="col-md-2">
+            <img id="spotify-logo" class="img-fluid" src="./src/image/spotify.svg" alt="logo">
+          </div>
+          <div class="row footer-grid">
             <div class="col-md-2">
               <h4>Company</h4>
                 <ul class="navbar-nav">
@@ -180,7 +180,7 @@
                   <li><a href="#">Web Player</a></li>
                 </ul>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2">
               <ul class="list-unstyled">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
